# asr_flock_of_birds

./: CMakeLists.txt  License.txt  README  README.md  mainpage.dox  package.xml
include/: bird_track_impl.h  complex.h  quaternion.h  serial.h  tracker_impl.h
kogmo_fob/trackerCalibration/: Doxyfile  Main.cc  Makefile  Tracker_Calibration_impl.cc  Tracker_Calibration_impl.h  cData.cc  cData.h  calibrationData.h  config.make  qt_calibration.ui  qt_calibration.ui.h  qt_editdata.ui  qt_editdata_impl.cc  qt_editdata_impl.h  readme  test  trackerConstants.h
kogmo_fob/trackerCalibration/CalibFiles/: 061222-silver-set.calib  070123-silver-set.calib  Martin-SFBBegehung1-080215.calib  Martin-SFBBegehung2-080223.calib  Martin-SFBBegehung3-080223.calib  Martin-SFBBegehung4-080224.calib  Martin-SFBBegehung5-080226.calib  Martin-SFBBegehung5-080226_2.calib  Martin-SWR1-080919  Rainer_290212.calib  heute.calib  test_koordinaten neu2.calib  test_koordinaten1.calib  test_koordinaten1_calib1.calib  test_koordinaten1_calib2.calib  test_koordinaten2_calib1.calib
kogmo_fob/trackerCalibration/Messdaten/: Differ_Both.raw  Differ_Left.raw  Differ_Right.raw  Messdaten_Kommentare.txt  Neu_Alt.raw  desk_and_freezer.raw  desk_overlays.raw  display.gnuplot  left_hand_all_crt_off.raw  left_hand_desk.raw  left_hand_freezer.raw  left_hand_metal_inside.raw  left_hand_no_metal_inside.raw  left_hand_some_crt_on_offset_z_plus_30.raw  left_hand_wm_wom_inside.raw  right_hand_all_crt_off.raw  right_hand_angles_1.raw  right_hand_freezer.raw  right_hand_freezer_1_and_2.raw  right_hand_freezer_2.raw  right_hand_freezer_one_level.raw  right_hand_freezer_one_level_more_points.raw  right_hand_freezer_one_level_more_points_2.raw  right_hand_nl_desk.raw  right_hand_nl_desk2.raw  right_hand_some_crt_on.raw  setpoints.raw  setpoints_freezer.raw
kogmo_fob/trackerServer/: BirdTrack_impl.cc  BirdTrack_impl.h  Doxyfile  Main.cc  Makefile  polynomial.h  test_data.h  tracker_impl.cc  tracker_impl.h  transformCoords.cc  transformCoords.h
kogmo_fob/trackerServer/serialClass/: serial.cc  serial.h
launch/: env_remote.sh  flock_of_birds.launch  flock_of_birds_remote.launch  flock_of_birds_remote.sh
src/: bird_track_impl.cc  main.cc  tracker_impl.cc  transform_coords.cc
