<?xml version="1.0" ?>
<package>
	<name>asr_flock_of_birds</name>
	<version>1.0.0</version>
        <description>asr_flock_of_birds is a package that is used to track angle and position of a sensor-equipped glove</description>
	<author>Bernhardt Andre, Engelmann Stephan, Giesler Björn, Heller Florian, Jäkel Rainer, Nguyen Trung, Pardowitz Michael, Weckesser Peter, Yi Xie, Zöllner Raoul</author>
	<maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>asr_msgs</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>std_srvs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>asr_msgs</run_depend>
</package>
