<?xml version="1.0" ?>
<package>
	<name>asr_flock_of_birds</name>
	<version>1.0.0</version>
        <description>The asr_flock_of_birds package is the driver for Ascension Technology Corp magnet-tracking system "Flock of Birds". It provides the remote server which publishes two 6d posemarker and the nessesary TF from the magnettracking system. It also contains launchfiles and calibration tools for the use of it.</description>
	<author>Bernhardt Andre, Engelmann Stephan, Giesler Björn, Heller Florian, Jäkel Rainer, Nguyen Trung, Pardowitz Michael, Weckesser Peter, Yi Xie, Zöllner Raoul</author>
	<maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_srvs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>asr_msgs</build_depend>
	
	<run_depend>roscpp</run_depend>
	<run_depend>std_srvs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>asr_msgs</run_depend>
</package>
